2006-06-12  Derek Scherger  <derek@echologic.com>

	* cmd_merging.cc (get_roster): allow no arguments and default to
	value in _MTN/revision
	* std_hooks.lua: switch temporary file names from mt.XXX to
	mtn.XXX; update attr function docs; add java class files to
	standard ignore hook

2006-06-11  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Updated and translated a few more strings (68 to go).

2006-06-10  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Clear 2 fuzzies.  Change a %s to %d, corresponding to
	Lapo's change below.

2006-06-09  Lapo Luchini  <lapo@lapo.it>

	* database.cc: corrected a '%s' in a '%d', removed a couple of '\n'.
	* po/it.po: Updated and translated a few more strings (71 to go).

2006-06-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* visualc/sqlite3.vcproj: Let SQLite build find our config.h.

2006-06-08  Matt Johnston  <matt@ucc.asn.au>

	* inodeprint.cc: convert to basic_io format. 
	Silently skips reading old format files, then writes
	out the new format as per usual. Old mtn versions
	have no format checking so will read the (nonsensical)
	new format file without errors.

2006-06-08  Matt Johnston  <matt@ucc.asn.au>

	* boost/format/feed_args.hpp: 0 needs to be unsigned.
	* vocab.cc: #undef EXTERN before #defining it again

2006-06-07  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* cert.cc:
	* charset.cc:
	* commands.cc:
	* keys.cc:
	* lua.cc:
	* netsync.cc:
	* netxx_pipe.cc:
	* rcs_import.cc:
	* schema_migration.cc:
	* simplestring_xform.cc:
	* txt2c.cc:
	* xdelta.cc: add some more using std::* directives.
	* boost/format/feed_args.hpp: std::streamsize might be signed

2006-06-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am: Add new SQLite sources.
	* sqlite/*: Import SQLite 3.3.6.
	* Makefile.am, configure.ac: Test for fdatasync and usleep.

2006-06-07  Nathaniel Smith  <njs@pobox.com>

	* netxx_pipe.cc (simple_pipe_test): Another test failure,
	another klugey #ifdef...
