@@ -1,3 +1,8 @@
+2006-06-13  Derek Scherger  <derek@echologic.com>
+
+	* cmd_list.cc (ls_changed): roster friendly rewrite using existing
+	select_nodes_modified_by_cset
+
 2006-06-12  Derek Scherger  <derek@echologic.com>
 
 	* cmd_merging.cc (get_roster): allow no arguments and default to
